@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX clamav-0.90-compat.patch 585 RMD160 3ee74f163bd8b4440f06773ec7abe3bcec1fff79 SHA1 fedfe373a6a911230c553fd5a095c8acb72b4ce2 SHA256 7a646386f74bc9094bd39d6762b78ef74310678cdef5484650e0aa242cf570e9
 MD5 6c50cdabc6ee6dc40df2b89c075380a5 files/clamav-0.90-compat.patch 585
 RMD160 3ee74f163bd8b4440f06773ec7abe3bcec1fff79 files/clamav-0.90-compat.patch 585
@@ -22,43 +25,34 @@ AUX clamd.rc 3565 RMD160 704da4f51a69f01524ca68ebe379736c9b0597ce SHA1 d087a49aa
 MD5 5f886e0001a0f76405ad7ae2bcad239f files/clamd.rc 3565
 RMD160 704da4f51a69f01524ca68ebe379736c9b0597ce files/clamd.rc 3565
 SHA256 50ca2c25f796bb3554b5aa08f9e1bbe043ced62f58f2295f6cf33403d7c23dd8 files/clamd.rc 3565
-DIST clamav-0.91.1.tar.gz 13099119 RMD160 a9b1526d11264d55e3ac38b7c16d27db43bf8a4e SHA1 51ff98325b5ffd49dfc0f0cbf92134c0d872cd21 SHA256 f98edecae40473c142fe49a0e02f5ff7fb28d778c4bd510dad747d208d20cb00
 DIST clamav-0.91.2.tar.gz 13394538 RMD160 9e181a7a4fd08377ff47663aed27f8cc97249a21 SHA1 f18007c3045a1d78967adad805c6934d46ca6419 SHA256 dac9de86dff5ef4c9a6e4962da24988e1aa74948a21b7fb7b7fed17867ddf2a0
-DIST clamav-0.91.tar.gz 13026634 RMD160 192acbe2fa290030df2fd60c7f323b434acc7a69 SHA1 995e054d19250777597c504552310490a59d8f76 SHA256 329ad13ae12390d3758017297e307ca06744bfb4e3fb61424b4f064faf5a2bbb
 DIST clamav-0.92rc2.tar.gz 13785280 RMD160 312dd39a1afd73b6f1808fa407a6f882a7059034 SHA1 e22a6ace3b04ec668387253804dd6de97877a677 SHA256 503073f54007757ad37e509b061f902ef2244be02ebacd6671d518abbf443f09
-EBUILD clamav-0.91.1.ebuild 4304 RMD160 9e4dadde02fd55773c1b459951fdd7f716eb406b SHA1 c51c05f714800982523006064ea99a38afa11c8a SHA256 1e315215fcf5a94cd823e45cc9764cf500779dbe59961e21a6a27a9803493c5c
-MD5 1eeddcbb72ce535c226cdc6ba72d2c07 clamav-0.91.1.ebuild 4304
-RMD160 9e4dadde02fd55773c1b459951fdd7f716eb406b clamav-0.91.1.ebuild 4304
-SHA256 1e315215fcf5a94cd823e45cc9764cf500779dbe59961e21a6a27a9803493c5c clamav-0.91.1.ebuild 4304
-EBUILD clamav-0.91.2.ebuild 4298 RMD160 af0788b4ff49770ec63572f643d41c996a7effed SHA1 00041e6f87230a65c0e712f7d7f2f853a3a8b1b2 SHA256 262d6935fcd816de08370802735fb2db50a34ebeb4094d0d05a006770fc6cd5a
-MD5 23d040cea4892174bad6c92d81fe793d clamav-0.91.2.ebuild 4298
-RMD160 af0788b4ff49770ec63572f643d41c996a7effed clamav-0.91.2.ebuild 4298
-SHA256 262d6935fcd816de08370802735fb2db50a34ebeb4094d0d05a006770fc6cd5a clamav-0.91.2.ebuild 4298
-EBUILD clamav-0.91.ebuild 4292 RMD160 2c91464c0a27cf56bb78bf81110c1c90ec01fb9c SHA1 d6b6400ffd867691f6363fbd973f834e10a311b8 SHA256 a75fe69369b5f2fa357c9d4f3cffdb8465ee4fbc2104370dde20d5ccba71dd2a
-MD5 6c7ea16d7cedbd9a85db797d7a1adba2 clamav-0.91.ebuild 4292
-RMD160 2c91464c0a27cf56bb78bf81110c1c90ec01fb9c clamav-0.91.ebuild 4292
-SHA256 a75fe69369b5f2fa357c9d4f3cffdb8465ee4fbc2104370dde20d5ccba71dd2a clamav-0.91.ebuild 4292
-EBUILD clamav-0.92_rc2.ebuild 4367 RMD160 3d17a1e00e7ad1776918335a6a961772ad47cf4d SHA1 dda1b8470ceaa503697a478f0106d9e22c9f0d56 SHA256 2a1beeccfbdd3187c077b9e5f914e14f7d0bfb810fa92bd12b530a14cfa735e5
-MD5 68b9e986a842ce5c569ae745280c0d3d clamav-0.92_rc2.ebuild 4367
-RMD160 3d17a1e00e7ad1776918335a6a961772ad47cf4d clamav-0.92_rc2.ebuild 4367
-SHA256 2a1beeccfbdd3187c077b9e5f914e14f7d0bfb810fa92bd12b530a14cfa735e5 clamav-0.92_rc2.ebuild 4367
-MISC ChangeLog 39207 RMD160 03e45e9f7517016bbd3e91079b987eaeb84f3768 SHA1 ec38cc58782831ec2a2f05b601f93fe2897a9929 SHA256 52734b2b3c3f9c32cde4eca73e7b81aba721ff57601a42320a7e8c84abcfec1b
-MD5 064af032f5fdc1f0b4a625b5695adec8 ChangeLog 39207
-RMD160 03e45e9f7517016bbd3e91079b987eaeb84f3768 ChangeLog 39207
-SHA256 52734b2b3c3f9c32cde4eca73e7b81aba721ff57601a42320a7e8c84abcfec1b ChangeLog 39207
+EBUILD clamav-0.91.2.ebuild 4236 RMD160 a6ac8480ebb4bf4707a859ef05f405d008ec62d9 SHA1 f2ca9d86c993d5fba4743b71a4364dc9a5907fcb SHA256 80d183b466341739dcec4a8c8ca3f430af6227878c5e9d400c669c6981d27c58
+MD5 694e86b291089110e3acedba3e237959 clamav-0.91.2.ebuild 4236
+RMD160 a6ac8480ebb4bf4707a859ef05f405d008ec62d9 clamav-0.91.2.ebuild 4236
+SHA256 80d183b466341739dcec4a8c8ca3f430af6227878c5e9d400c669c6981d27c58 clamav-0.91.2.ebuild 4236
+EBUILD clamav-0.92_rc2.ebuild 4308 RMD160 d75dfcd1b59e5059c21a379cc5071ff9e608b0d8 SHA1 225cbfd6136d9b2b1b9f243fbc7affb25b03636a SHA256 27b4ed91e24d0bde84f6d10a0c2ae32140d02a1b8066c956f529021da8d4f9ad
+MD5 f691ad3885dfa5359c72e71e819971e3 clamav-0.92_rc2.ebuild 4308
+RMD160 d75dfcd1b59e5059c21a379cc5071ff9e608b0d8 clamav-0.92_rc2.ebuild 4308
+SHA256 27b4ed91e24d0bde84f6d10a0c2ae32140d02a1b8066c956f529021da8d4f9ad clamav-0.92_rc2.ebuild 4308
+MISC ChangeLog 39410 RMD160 175695bfc5b2c6d107b1e916e996dea9acc8cd4a SHA1 a8ddfcf05004db9ed577fd02543e8c0038c1abc3 SHA256 ad2b398b6fe3a2b57c4d45465e79a49aec1e4558cca428f9531e51b0a006bd3f
+MD5 c10123f826d3d95c3498bb782a134f11 ChangeLog 39410
+RMD160 175695bfc5b2c6d107b1e916e996dea9acc8cd4a ChangeLog 39410
+SHA256 ad2b398b6fe3a2b57c4d45465e79a49aec1e4558cca428f9531e51b0a006bd3f ChangeLog 39410
 MISC metadata.xml 184 RMD160 c37bff1fc1cd7139c91dae9b0fa5082e1d81f153 SHA1 cc0a188d9ad2411e78747326c62dd046bd5413c8 SHA256 d51011aa837db802ef539a1321a4af0a4a00879d475b92fd58f3c01df7320b58
 MD5 7e32edfd72887a57b16ecd73f0f7a1a0 metadata.xml 184
 RMD160 c37bff1fc1cd7139c91dae9b0fa5082e1d81f153 metadata.xml 184
 SHA256 d51011aa837db802ef539a1321a4af0a4a00879d475b92fd58f3c01df7320b58 metadata.xml 184
-MD5 cf331ee5043d2667587d2d5f8207214f files/digest-clamav-0.91 241
-RMD160 b9ca05ab7e5455ea0049d3781364665601eb2cd1 files/digest-clamav-0.91 241
-SHA256 005e0f558c95292331bd1ecc52559ab3ede5ec481ab32fc15717cdfb2143d269 files/digest-clamav-0.91 241
-MD5 957debe430d48ffb27ac17aa6189dab4 files/digest-clamav-0.91.1 247
-RMD160 423825904509af07b3afdbd6e291433dfb7efe77 files/digest-clamav-0.91.1 247
-SHA256 a548eaceeae74311a6c0121e128ef89dbcf3636b7113c0090afdb5cece703983 files/digest-clamav-0.91.1 247
 MD5 00ade3fd37049fda2aee0672a43d7e66 files/digest-clamav-0.91.2 247
 RMD160 168d12eabacf3f4fc8158e74d23def1ab63031d7 files/digest-clamav-0.91.2 247
 SHA256 af7a808342703688323e4b3cf3d3fbdecd73ec0cfca98e80a50cdcfa259214fb files/digest-clamav-0.91.2 247
 MD5 034697341704da6522d9884d1c1f299a files/digest-clamav-0.92_rc2 250
 RMD160 e29d71319a715605660424726fb6d76089008b48 files/digest-clamav-0.92_rc2 250
 SHA256 0b191b6d54c691a09ce0f0dce3b0685fff9f90ee875ac95ed95dd3661a7f6730 files/digest-clamav-0.92_rc2 250
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.7 (GNU/Linux)
+
+iD8DBQFHO0uZQlM6RnzZP+IRAq+eAJ4mwVbvDpGnrg1e9m+ljSJkgTXusACgpxDt
+1fFX0iWEzjQl/BifhTeOXaw=
+=DC97
+-----END PGP SIGNATURE-----
