@@ -1,3 +1,0 @@
-MD5 35192423e44642c86ea69dc93f59cfb1 clamav-0.91.tar.gz 13026634
-RMD160 192acbe2fa290030df2fd60c7f323b434acc7a69 clamav-0.91.tar.gz 13026634
-SHA256 329ad13ae12390d3758017297e307ca06744bfb4e3fb61424b4f064faf5a2bbb clamav-0.91.tar.gz 13026634
