@@ -1,3 +1,0 @@
-MD5 60152bf1e24b3fbdf0473794199e5215 clamav-0.91.1.tar.gz 13099119
-RMD160 a9b1526d11264d55e3ac38b7c16d27db43bf8a4e clamav-0.91.1.tar.gz 13099119
-SHA256 f98edecae40473c142fe49a0e02f5ff7fb28d778c4bd510dad747d208d20cb00 clamav-0.91.1.tar.gz 13099119
